releases/phoenix.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phoenix
